--- a/src/theme/main.scss
+++ b/src/theme/main.scss
@@ -12,6 +12,22 @@ body {
     line-height: 24px;
 }
 
+.visuallyhidden/*:not(:focus):not(:active)*/ {
+    position: absolute;
+
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+
+    white-space: nowrap;
+
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
+
 // TODO вынести отдельно
 .title {
     font-family: $font__titles;
