Add util variable for hover state

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -16,3 +16,5 @@ $gradient__secondary: linear-gradient(180deg, #6FCF97 0%, #66D2EA 100%);
 
 $font__main: 'Montserrat', Arial, sans-serif;
 $font__titles: 'Quicksand', Arial, sans-serif;
+
+$hover: '&:hover, &:focus, &:active';
