--- a/src/components/radio/radio.pug
+++ b/src/components/radio/radio.pug
@@ -9,12 +9,15 @@ mixin radio(params)
     each input in inputs
         - const { value, label } = input;
 
-        label.radio__label= label
-            input(
-                class=`radio__input visuallyhidden ${className}`
-                type='radio',
-                name=name,
-                value=value,
-                checked=checked
-                disabled=disabled
-            )
+        .radio
+            label.radio__label
+                input.radio__input(
+                    class=`radio__input visuallyhidden ${className}`
+                    type='radio',
+                    name=name,
+                    value=value,
+                    checked=checked
+                    disabled=disabled
+                )
+                span.radio__custom-radio
+                span.radio__label-text= label
