--- a/src/layout/main.pug
+++ b/src/layout/main.pug
@@ -7,6 +7,11 @@ html(lang="ru")
         meta(name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0")
         meta(http-equiv="X-UA-Compatible" content="ie=edge")
 
+        // TODO загружать шрифты с сервера
+        link(href="https://fonts.googleapis.com/css?family=Montserrat|Quicksand&display=swap" rel="stylesheet")
+        link(href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet")
+        link(href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css" rel="stylesheet" integrity="sha256-UzFD2WYH2U1dQpKDjjZK72VtPeWP50NoJjd26rnAdUI=" crossorigin="anonymous")
+
         meta(name='description' content=description)
 
         title= title
