--- a/src/pages/ui-kit.pug
+++ b/src/pages/ui-kit.pug
@@ -4,6 +4,7 @@ include ../components/field/field
 include ../components/checkbox/checkbox
 include ../components/radio/radio
 include ../components/toggle-input/toggle-input
+include ../components/like-btn/like-btn
 
 block variables
     -
@@ -33,3 +34,6 @@ block content
     +toggleInput({
         label: 'Toggle button',
     })
+    +likeBtn(12)
+    +likeBtn(2)
+    +likeBtn(3)
