--- a/src/components/like-btn/like-btn.pug
+++ b/src/components/like-btn/like-btn.pug
@@ -1,5 +1,5 @@
 mixin likeBtn(likesCount)
     button.like-btn(type='button')
-        i.like-btn__icon.material-icons favorite
+        i.like-btn__icon.material-icons favorite_border
         span.like-btn__count= likesCount
         span.visuallyhidden Like
