--- a/src/theme/mixins.scss
+++ b/src/theme/mixins.scss
@@ -7,3 +7,17 @@
         background-clip: text;
     }
 }
+
+@mixin reset-button() {
+    margin: 0;
+    padding: 0;
+
+    font: inherit;
+    line-height: 1;
+    letter-spacing: inherit;
+    text-align: center;
+    color: inherit;
+
+    background-color: transparent;
+    border: none;
+}
