Add rate button

--- a/src/pages/ui-kit.pug
+++ b/src/pages/ui-kit.pug
@@ -5,6 +5,7 @@ include ../components/checkbox/checkbox
 include ../components/radio/radio
 include ../components/toggle-input/toggle-input
 include ../components/like-btn/like-btn
+include ../components/rate-btn/rate-btn
 
 block variables
     -
@@ -37,3 +38,5 @@ block content
     +likeBtn(12)
     +likeBtn(2, true)
     +likeBtn(3)
+    +rateBtn(4)
+    +rateBtn(2)
