--- a/src/theme/main.scss
+++ b/src/theme/main.scss
@@ -29,18 +29,20 @@ body {
 }
 
 // TODO вынести отдельно
-.title {
+.title { // Subsection or widget
     font-family: $font__titles;
     font-size: 24px;
     line-height: 30px;
     color: $color__text-title;
 
-    &--2 {
+    &--2 { // Item title inside widgets
         font-size: 19px;
         line-height: 24px;
     }
 
-    &--3 {
+    &--3,
+    &--cta,
+    &--label { // Label or CTA text
         font-family: $font__main;
         font-size: 12px;
         line-height: 15px;
