--- a/src/theme/main.scss
+++ b/src/theme/main.scss
@@ -31,6 +31,7 @@ body {
 // TODO вынести отдельно
 .title { // Subsection or widget
     font-family: $font__titles;
+    font-weight: bold;
     font-size: 24px;
     line-height: 30px;
     color: $color__text-title;
