--- a/src/pages/ui-kit.pug
+++ b/src/pages/ui-kit.pug
@@ -87,3 +87,13 @@ block content
             href: '/ui-kit.html',
             type: 'link',
         })
+        +btn({
+            label: 'Link style',
+            type: 'button',
+            linkStyle: true,
+        })
+        +btn({
+            label: 'Button with arrow',
+            type: 'button',
+            arrow: true,
+        })
