--- a/src/layout/main.pug
+++ b/src/layout/main.pug
@@ -8,7 +8,7 @@ html(lang="ru")
         meta(http-equiv="X-UA-Compatible" content="ie=edge")
 
         // TODO загружать шрифты с сервера
-        link(href="https://fonts.googleapis.com/css?family=Montserrat|Quicksand&display=swap" rel="stylesheet")
+        link(href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Quicksand:300,400,500,600,700&display=swap&subset=cyrillic" rel="stylesheet")
         link(href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet")
         link(href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css" rel="stylesheet" integrity="sha256-UzFD2WYH2U1dQpKDjjZK72VtPeWP50NoJjd26rnAdUI=" crossorigin="anonymous")
 
