--- a/src/pages/ui-kit.pug
+++ b/src/pages/ui-kit.pug
@@ -132,6 +132,7 @@ block content
         +dropdown({
             separate: false,
             initialSelectionText: 'Сколько гостей?',
+            controls: true,
             noun: {
                 one: 'гость',
                 two: 'гостя',
