Don't close menu on click on controls. Show default selection text and hide reset button if 0 items are selected.

--- a/src/components/dropdown/dropdown.pug
+++ b/src/components/dropdown/dropdown.pug
@@ -35,10 +35,12 @@ mixin dropdown(params)
 
                 if controls
                     div.dropdown__controls
-                        +btn({
-                            linkStyle: true,
-                            label: 'Очистить',
-                        })
+                        div.dropdown__reset-btn.hidden
+                            +btn({
+                                linkStyle: true,
+                                gray: true,
+                                label: 'Очистить',
+                            })
                         div.dropdown__apply-btn
                             +btn({
                                 linkStyle: true,
