--- a/src/theme/mixins.scss
+++ b/src/theme/mixins.scss
@@ -21,3 +21,9 @@
     background-color: transparent;
     border: none;
 }
+
+@mixin reset-list() {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
