--- a/src/pages/ui-kit.pug
+++ b/src/pages/ui-kit.pug
@@ -151,6 +151,7 @@ block content
     div
         +checkbox-list({
             title: 'Expandable checkbox list',
+            expandable: true,
             items: [{
                 label: 'Завтрак',
                 name: 'breakfast',
