--- a/src/pages/ui-kit.pug
+++ b/src/pages/ui-kit.pug
@@ -34,6 +34,13 @@ block content
         })
 
     div
+        +checkbox({
+            label: 'Checkbox',
+            name: 'test',
+            description: 'testtest',
+        })
+
+    div
         +radio({
             name: 'gender',
             inputs: [
