Add new color for icon-text-list. Fix dark %5 variable

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,8 +1,9 @@
 $color__dark-shade100: #1F2041;
 $color__dark-shade75: rgba($color__dark-shade100, .75);
-$color__dark-shade50: rgba($color__dark-shade100, .5);;
-$color__dark-shade25: rgba($color__dark-shade100, .25);;
-$color__dark-shade5: rgba($color__dark-shade100, .5);;
+$color__dark-shade50: rgba($color__dark-shade100, .5);
+$color__dark-shade25: rgba($color__dark-shade100, .25);
+$color__dark-shade10: rgba($color__dark-shade100, .1);
+$color__dark-shade5: rgba($color__dark-shade100, .05);
 $color__purple: #BC9CFF;
 $color__green: #6FCF97;
 
