--- a/src/pages/ui-kit.pug
+++ b/src/pages/ui-kit.pug
@@ -12,6 +12,7 @@ include ../components/dropdown/dropdown
 include ../components/checkbox-list/checkbox-list
 include ../components/bullet-list/bullet-list
 include ../components/icon-text-list/icon-text-list
+include ../components/testimonial/testimonial
 
 block variables
     -
@@ -208,4 +209,14 @@ block content
             title: 'Удобство',
             description: 'Окно в каждой из спален',
         }])
+
+    div
+        +testimonial({
+            name: 'Имярек',
+            date: '2019-08-11',
+            text: 'Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.',
+            likes: 12,
+            imageUrl: 'assets/img/user1.jpg',
+            imageUrlRetina: 'assets/img/user1@2x.jpg',
+        })
 
