Style dropdown. Replace icons. Add controls

--- a/src/components/c-datepicker/c-datepicker.pug
+++ b/src/components/c-datepicker/c-datepicker.pug
@@ -1,7 +1,26 @@
+include ./../btn/btn
+
 mixin c-datepicker(param)
     - const { twoFields } = param;
     div.c-datepicker(data-two-fields= (twoFields) ? 'true' : 'false')
         div.c-datepicker__output
-            input.c-datepicker__input(disabled)
-            input.c-datepicker__start(type='text' readonly)
-            input.c-datepicker__end(type='text' readonly)
+            input.c-datepicker__input(disabled=twoFields)
+
+            if twoFields
+                input.c-datepicker__start(type='text' readonly)
+                input.c-datepicker__end(type='text' readonly)
+
+        div.c-datepicker__controls.hidden
+            div.c-datepicker__reset
+                +btn({
+                  label: 'Очистить',
+                  type: 'button',
+                  linkStyle: true,
+                  gray: true,
+                })
+            div.c-datepicker__apply
+                +btn({
+                  label: 'Применить',
+                  type: 'button',
+                  linkStyle: true,
+                })
