--- a/src/pages/ui-kit.pug
+++ b/src/pages/ui-kit.pug
@@ -235,6 +235,4 @@ block content
                 },
             ],
         })
-        //+c-datepicker({
-        //    date: '2019-08-19',
-        //})
+        +c-datepicker({ label: 'Выберите дату' })
