--- a/src/components/c-datepicker/c-datepicker.pug
+++ b/src/components/c-datepicker/c-datepicker.pug
@@ -2,13 +2,15 @@ include ./../btn/btn
 
 mixin c-datepicker(param)
     - const { twoFields } = param;
+    - const DEFAULT_VALUE = 'ДД.ММ.ГГГГ';
+
     div.c-datepicker(data-two-fields= (twoFields) ? 'true' : 'false')
         div.c-datepicker__output
-            input.c-datepicker__input(disabled=twoFields)
+            input.c-datepicker__input(value=DEFAULT_VALUE disabled=twoFields)
 
             if twoFields
-                input.c-datepicker__start(type='text' readonly)
-                input.c-datepicker__end(type='text' readonly)
+                input.c-datepicker__start(type='text' value=DEFAULT_VALUE readonly)
+                input.c-datepicker__end(type='text' value=DEFAULT_VALUE readonly)
 
         div.c-datepicker__controls.hidden
             div.c-datepicker__reset
