--- a/src/components/c-datepicker/c-datepicker.scss
+++ b/src/components/c-datepicker/c-datepicker.scss
@@ -14,6 +14,7 @@
 .c-datepicker__input,
 .c-datepicker__start,
 .c-datepicker__end {
+    display: block;
     width: 150px;
     padding: 12px 32px 8px 15px;
 
@@ -25,6 +26,10 @@
     line-height: 24px;
 
     color: $color__dark-shade75;
+}
+
+.c-datepicker__input {
+    width: auto;
 }
 
 .c-datepicker[data-two-fields='true'] .c-datepicker__input {
@@ -41,7 +46,7 @@
     border: none;
 }
 
-.c-datepicker__start {
+.c-datepicker__start-label {
     margin-right: 20px;
 
     &:last-child { // if one field
