--- a/src/components/c-datepicker/c-datepicker.scss
+++ b/src/components/c-datepicker/c-datepicker.scss
@@ -28,8 +28,12 @@
     color: $color__dark-shade75;
 }
 
+.c-datepicker__input-label {
+    width: 100%;
+}
+
 .c-datepicker__input {
-    width: auto;
+    width: 100%;
 }
 
 .c-datepicker[data-two-fields='true'] .c-datepicker__input {
@@ -47,11 +51,27 @@
 }
 
 .c-datepicker__start-label {
+    position: relative; // icon
     margin-right: 20px;
 
     &:last-child { // if one field
         margin-right: 0;
     }
+}
+
+.c-datepicker__end-label {
+    position: relative; // icon
+}
+
+.c-datepicker__more-icon {
+    position: absolute;
+
+    right: 8px;
+    bottom: 10px;
+
+    font-size: 24px;
+    line-height: 24px;
+    color: $color__dark-shade50;
 }
 
 .c-datepicker__controls {
