--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -19,3 +19,6 @@ $font__main: 'Montserrat', Arial, sans-serif;
 $font__titles: 'Quicksand', Arial, sans-serif;
 
 $hover: '&:hover, &:focus, &:active';
+
+$shadow__light: 0px 10px 20px $color__dark-shade5;
+$shadow__dark: 0px 0px 25px rgba(0, 0, 0, 0.2);
