--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -11,6 +11,7 @@ $color__text-main: $color__dark-shade75;
 $color__text-title: $color__dark-shade100;
 $color__text-field: $color__dark-shade25;
 $color__text-field-active: $color__text-main;
+$color__card-border: rgba(0, 0, 0, 0.12);
 
 $gradient__primary: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
 $gradient__secondary: linear-gradient(180deg, #6FCF97 0%, #66D2EA 100%);
