--- a/src/pages/ui-kit.pug
+++ b/src/pages/ui-kit.pug
@@ -15,6 +15,7 @@ include ../components/icon-text-list/icon-text-list
 include ../components/testimonial/testimonial
 include ../components/c-datepicker/c-datepicker
 include ../components/pick-room-card/pick-room-card
+include ../components/book-room-card/book-room-card
 
 block variables
     -
@@ -239,3 +240,23 @@ block content
 
     div
         +pick-room-card()
+
+    div
+        +book-room-card({
+          roomNumber: 888,
+          roomType: 'Люкс',
+          roomPrice: 9990,
+          total: 38081,
+          priceList: [{
+            name:  '9 990₽ х 4 суток',
+            price: 39960,
+          }, {
+            name:  'Сбор за услуги: скидка 2 179₽',
+            price: 0,
+            description: 'Lorem ipsum',
+          }, {
+            name: 'Сбор за дополнительные услуги',
+            price: 300,
+            description: 'Lorem ipsum',
+          }],
+        })
